--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -12,7 +12,7 @@
                           <li></li>
                         </ul>
                       </div> -->
-                      <div style="margin-right: 10rem !important;"><a class="Tajawal-Medium fs-25" href="#">الدعم الفني</a></div>
+                      <!-- <div style="margin-right: 10rem !important;"><a class="Tajawal-Medium fs-25" href="#">الدعم الفني</a></div> -->
                 </div>
                 <div class="user-profile me-auto">
                     <div class="dropdown my-auto">
