--- a/src/app/pages/client/order-details/order-details.component.css
+++ b/src/app/pages/client/order-details/order-details.component.css
@@ -12,8 +12,9 @@ table {
     width: 100%;
     height: 192px;
     margin: auto;
-    border-radius: 20px;
-    border-collapse: collapse;
+    border-collapse: separate !important;
+    border-radius: 20px !important;
+    border-spacing: 0 !important;
 }
 
 table thead{
@@ -185,7 +186,14 @@ th, td {
     padding: 25px 3%;
 }
 
-.col-container .btn-action .cancel-btn , .col-container .btn-action .delievery-btn , .col-container .btn-action .send-rating-btn , .col-container .btn-action .return-btn{
+.col-container .card-detail{
+  width: 90%;
+  padding: 10px 18px;
+  border-radius: 20px;
+  background-color: #2A2A2C;
+}
+
+.col-container .btn-action .cancel-btn , .col-container .btn-action .delievery-btn , .col-container .btn-action .send-rating-btn , .col-container .btn-action .return-btn ,.col-container .btn-action .confirm-payment-btn{
     width: 90%;
     height: 64px;
     background: #1B1C1E 0% 0% no-repeat padding-box;
