--- a/src/app/pages/supplier/supplier.component.html
+++ b/src/app/pages/supplier/supplier.component.html
@@ -23,7 +23,7 @@
     <div class="main-data">
         <div  *ngIf="AllclientsData?.length" class="row mt-50">
             <div class="col-12">
-                <table class="table table-bordered">
+                <table class="rounded-corners">
                     <thead>
                       <tr>
                         <th scope="col">رقم الطلب</th>
@@ -50,7 +50,7 @@
                             <td>{{item.amount}}</td>
                             <td>{{item.client}}</td>
                             <td>{{item.supplier}}</td>
-                            <td>{{item.status}}</td>
+                            <td [class.red-color]="item?.status.includes('بانتظار')" [class.green-txt-color]="!item?.status.includes('بانتظار')">{{item.status}}</td>
                             <td class="d-flex justify-content-center align-items-center">
                                 <a routerLink="order/{{item.id}}" class="btn Tajawal-Bold fs-16 detail-btn">عرض التفاصيل</a>
                             </td>
