--- a/src/app/pages/supplier/supplier.component.css
+++ b/src/app/pages/supplier/supplier.component.css
@@ -103,6 +103,19 @@ input{
     outline: 0 !important;
     border: 0 !important;
 }
+.dropdown .dropdown-menu{
+    background-color: #FFFFFF;
+}
+.dropdown .dropdown-menu li a{
+    text-decoration: none;
+    color: #1E2F51;
+    text-align: start;
+    background-color: transparent;
+}
+
+.dropdown .dropdown-menu li:hover{
+    background-color: #EEEEEE;
+}
 
 ::ng-deep input::placeholder{
     color: #BCBCBC !important;
@@ -142,7 +155,7 @@ input:active,
 }
 
 hr{
-    width: 1301px;
+    width: 100%;
     height: 0px;
     border: 1px solid #CECECE;
 }
